# CS-381-mason-haines

./: README.md  template4as2
as1/: CMakeLists.txt  Doughnut.glb:Zone.Identifier  README.md  raylib-cpp
as1/.cache/clangd/index/: BufferedInput.cpp.1B1EF2BBC5864201.idx  as1.cpp.13E35DE880733D4D.idx  connection.cpp.6368AB1300D92515.idx  context.c.8ADD089E448DB6CA.idx  cubemap.fs.CA165D4918CA6C87.idx  cubemap.vs.DE2C236823A8BA7C.idx  egl_context.c.3432C6F91B998B8F.idx  function_detail.cpp.2CF07F7127DF109A.idx  glx_context.c.6196AAF430203848.idx  init.c.0C0CFFD67D4A753C.idx  input.c.328E88DCBE202935.idx  linux_joystick.c.3A500C84D124E992.idx  monitor.c.8A49719061CE3309.idx  null_init.c.2FB9235B37ACC6AD.idx  null_joystick.c.09D98F1E7D4DB94E.idx  null_monitor.c.6D37B72CCB1E3146.idx  null_window.c.12B2334EC6AFDA71.idx  osmesa_context.c.85028D46AF21F83C.idx  platform.c.7BFFDA2526C43662.idx  posix_module.c.CF4A68F010488C70.idx  posix_poll.c.4A1B671F2A77B411.idx  posix_thread.c.28B58ED0CD5FC788.idx  posix_time.c.156934951AA24DAC.idx  raudio.c.69C2536968E76180.idx  rcore.c.11FE076AA443A5D7.idx  rmodels.c.12CABF2F1615B340.idx  rshapes.c.F57A772D8B036F8E.idx  rtext.c.1980EC475AA1E410.idx  rtextures.c.7AC1CCE2661383EF.idx  signal_impl.cpp.BE2EAE2055CFB147.idx  skybox.cpp.E0DC31ECD2195689.idx  skybox.fs.B22D9846E199C9B7.idx  skybox.hpp.923C21AC3DE9210B.idx  skybox.vs.EA36F58D9B4D067A.idx  test.cpp.21BF8D889CE0A0E8.idx  utils.c.D3F73CA47C0911DE.idx  vulkan.c.B009CA7C527406CF.idx  window.c.1C97468CA1DF7FAF.idx  x11_init.c.7DCFEF2B21F29CF1.idx  x11_monitor.c.5CFD823FA2E8ED78.idx  (+2 more)
as1/meshes/: Barrel1.glb  Doughnut.glb  OrientExplorer.glb  SmitHouston_Tug.glb  car.glb:Zone.Identifier  heli.glb  heli.glb:Zone.Identifier
as1/src/: as1.cpp  environment.cpp
as4/: CMakeLists.txt  Clock Town, First Day.mp3:Zone.Identifier  MM_Link_Attack4.wav:Zone.Identifier  OOT_Navi_WatchOut3.wav:Zone.Identifier  README.md  ScoreBoard.txt
as4/.cache/clangd/index/: BufferedInput.cpp.8D970B5C3E71DE76.idx  BufferedInput.cpp.EEC9D67BA077BA4A.idx  as4.cpp.6DE4887606B75BEF.idx  as4.cpp.EA4C6A279216ED02.idx  connection.cpp.93F3DED284290106.idx  connection.cpp.FB7B49661B43FC06.idx  context.c.1D8144CDBCAC7B34.idx  context.c.F4368A9077CE11F6.idx  cubemap.fs.9DA80F6E431ED58E.idx  cubemap.fs.A824257A996C13C7.idx  cubemap.vs.23EDC2353F56FB95.idx  cubemap.vs.3C9AEB601D75A7BB.idx  egl_context.c.73CFDE5ED0431130.idx  egl_context.c.C3E4C8AA6EEEF2F7.idx  function_detail.cpp.12C9C9058D5FE837.idx  function_detail.cpp.520BF741E7994007.idx  glx_context.c.1A9277E98CF056D6.idx  glx_context.c.EB5FCCFE2D2150C2.idx  init.c.AEA11FF9F0BB13A1.idx  init.c.F68CD6930A402749.idx  input.c.99A35EB197E8A3C5.idx  input.c.EF334D0E3B016A37.idx  linux_joystick.c.78F25B40E45CCA49.idx  linux_joystick.c.890D71FF623C5477.idx  monitor.c.231D7ECE5BC944E8.idx  monitor.c.6FB94245DC9B46AA.idx  null_init.c.207AFA850E62B428.idx  null_init.c.C0BE3BFA2B830294.idx  null_joystick.c.8F79F3947AE432F9.idx  null_joystick.c.B5459EDC3AB1473A.idx  null_monitor.c.A88CC3A0F858AFBC.idx  null_monitor.c.B13EFF24347490B4.idx  null_window.c.B09CCFFD1CF639B7.idx  null_window.c.D0BD975E9882DB1F.idx  osmesa_context.c.4866A602AC8DA1AC.idx  osmesa_context.c.F65055F62C78C736.idx  platform.c.2F95B8D3F3A52855.idx  platform.c.5B3AC608EE56F6FB.idx  posix_module.c.544986EECCB912AA.idx  posix_module.c.F0B48E4FEE93F059.idx  (+44 more)
as4/meshes/: ddg51.glb
as4/src/: as4.cpp
as5/: .gitignore  CMakeLists.txt  README.md  VolumeControl.h:Zone.Identifier
as5/.cache/clangd/index/: BufferedInput.cpp.B3165572EABE68DD.idx  VolumeControl.h.343878399E59B8C5.idx  as4.cpp.192F81EF4E6486B0.idx  as5.cpp.B39265EE0228E603.idx  connection.cpp.6985289EEA450FC8.idx  context.c.94B8E40BA00F9A87.idx  cubemap.fs.39F913134A3C0E35.idx  cubemap.vs.0B3D64BD1658D15C.idx  delegate.hpp.266EA97A11A90422.idx  egl_context.c.B2AC31936F4824F8.idx  function_detail.cpp.A3DCA5BA4F6713C9.idx  glx_context.c.5DDC0FDE7E26931F.idx  init.c.7B4B6307745087F5.idx  input.c.693337A281723EC4.idx  linux_joystick.c.C7257F8A13C5922F.idx  monitor.c.693F432064FE5606.idx  null_init.c.2AE4884EA1EC6366.idx  null_joystick.c.EDF8A05A3F81DA12.idx  null_monitor.c.45392D51197457DB.idx  null_window.c.2B7A80D3D9B1E987.idx  osmesa_context.c.336CA41FD5711B77.idx  platform.c.9CCC3A4FBF448D85.idx  posix_module.c.92E17C0282504600.idx  posix_poll.c.A50FFB5B1CA9FCED.idx  posix_thread.c.84B4511357CA040F.idx  posix_time.c.195A0FEB94D67E2A.idx  raudio.c.18C7B66E2A25B60A.idx  raygui.cpp.7F5CE12A9DDF2797.idx  rcore.c.AFB1C1FAC520E0DA.idx  rmodels.c.A60860F2CE9FEC11.idx  rshapes.c.2EDA25FB3749AE02.idx  rtext.c.A375234EB9EE36C9.idx  rtextures.c.B0637738EDD81BF9.idx  signal_impl.cpp.B406C66C9814E3DD.idx  skybox.cpp.A3604ABCB043EE72.idx  skybox.fs.CED12A3E567139F0.idx  skybox.hpp.4C6BCA1F35722829.idx  skybox.vs.7D12D286B7D2425D.idx  test.cpp.107874DE9B66BC0B.idx  utils.c.CB239058BB759819.idx  (+6 more)
as5/sounds/: banana_bread_at_work.mp3:Zone.Identifier
as5/src/: as5.cpp  delegate.hpp
as5/textures/: arrow.png:Zone.Identifier
as6/: .gitignore  CMakeLists.txt  README.md
as6/.cache/clangd/index/: BufferedInput.cpp.6282425B4FA194E0.idx  as6.cpp.7651A6F44B0D71A7.idx  components.cpp.AFEA909C7A0C0E12.idx  connection.cpp.56500E1896FF34F8.idx  context.c.985F33E21458A021.idx  (+42 more)
as6/meshes/: CargoG_HOSBrigadoon.glb
as6/src/: as6.cpp  asSIX.cpp  bufferedInputComponent.hpp  component.hpp  demo.cpp  entity.hpp  physicsComponent.hpp  renderingComponent.hpp  transformComponent.hpp
as8/: CMakeLists.txt  README.md  raylib-cpp
as8/meshes/: PolyPlane.glb
as8/src/: DOECS.cpp  as6.cpp  attempt2.cpp  attempts.cpp  component.hpp  delegate.hpp  monolithic.cpp  physicsComponent.hpp  skybox.cpp  skybox.hpp  transformComponent.hpp
as8/textures/: space.jpg:Zone.Identifier
as9/: CMakeLists.txt  README.md
as9/meshes/: ChickenCoop.glb:Zone.Identifier  Duck.glb:Zone.Identifier  Grass Platform.glb:Zone.Identifier  Island.glb:Zone.Identifier  Pickle Character.glb:Zone.Identifier
as9/src/: Counter.cpp  DOECS.cpp  as9.cpp
as9/textures/: floor.jpg:Zone.Identifier  wakerwater.jpg:Zone.Identifier
(+255 files in other folders)
