cmake_minimum_required(VERSION 3.18)
project(as0 LANGUAGES CXX)

add_subdirectory(raylib-cpp)

# file(GLOB sources "src/*.cpp" "src/*.c")
# this is to help manage the new files with structs
set(sources
    src/as6.cpp
    src/component.hpp
    src/transformComponent.hpp
    src/renderingComponent.hpp
    src/entity.hpp
    src/skybox.hpp
    src/skybox.cpp
)
add_executable(as6 ${sources})
target_link_libraries(as6 PUBLIC raylib raylib_cpp raylib::buffered)
set_property(TARGET as6 PROPERTY CXX_STANDARD 20)

configure_file(textures/skybox.png textures/skybox.png COPYONLY)
configure_file(textures/grass.jpg textures/grass.jpg COPYONLY)
configure_file(textures/water.jpg textures/water.jpg COPYONLY)
configure_file(meshes/PolyPlane.glb meshes/PolyPlane.glb COPYONLY)

include(includeable.cmake)

make_includeable(raylib-cpp/raylib/examples/models/resources/shaders/glsl330/skybox.vs generated/skybox.vs)
make_includeable(raylib-cpp/raylib/examples/models/resources/shaders/glsl330/skybox.fs generated/skybox.fs)
make_includeable(raylib-cpp/raylib/examples/models/resources/shaders/glsl330/cubemap.vs generated/cubemap.vs)
make_includeable(raylib-cpp/raylib/examples/models/resources/shaders/glsl330/cubemap.fs generated/cubemap.fs)